{
  "sourceLanguage" : "en",
  "strings" : {
    "alertButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "alertMessage" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Invalid fields!"
          }
        }
      }
    },
    "cityLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "cityLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "confirmPasswordPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Repeat password"
          }
        }
      }
    },
    "confirmPasswordTextFieldAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "confirmPasswordTextFieldAccessibilityIdentifier"
          }
        }
      }
    },
    "dailyForecastLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Daily Forecast"
          }
        }
      }
    },
    "dailyForecastLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "dailyForecastLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "emailPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email"
          }
        }
      }
    },
    "emailTextFieldAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "emailTextFieldAccessibilityIdentifier"
          }
        }
      }
    },
    "errorAPI" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error fetching data"
          }
        }
      }
    },
    "hourLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "hourLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "hourlyForecastLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hourly Forecast"
          }
        }
      }
    },
    "hourlyForecastLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "hourlyForecastLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "humidityLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Humidity"
          }
        }
      }
    },
    "humidityLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "humidityLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "humidityValueLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "humidityValueLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "initView" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "init(coder:) has not been implemented"
          }
        }
      }
    },
    "loaderAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "loaderAccessibilityIdentifier"
          }
        }
      }
    },
    "maxTemperatureLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "maxTemperatureLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "minTemperatureLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "minTemperatureLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "passwordPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        }
      }
    },
    "passwordTextFieldAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "passwordTextFieldAccessibilityIdentifier"
          }
        }
      }
    },
    "signInButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign-In"
          }
        }
      }
    },
    "signInButtonAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "signInButtonAccessibilityIdentifier"
          }
        }
      }
    },
    "signUpButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign-Up"
          }
        }
      }
    },
    "signUpButtonAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "signUpButtonAccessibilityIdentifier"
          }
        }
      }
    },
    "temperatureLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "temperatureLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "titleAppLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weather Forecast"
          }
        }
      }
    },
    "titleScreenAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "titleScreenAccessibilityIdentifier"
          }
        }
      }
    },
    "weekDayLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "weekDayLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "windLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wind"
          }
        }
      }
    },
    "windLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "windLabelAccessibilityIdentifier"
          }
        }
      }
    },
    "windValueLabelAccessibilityIdentifier" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "windValueLabelAccessibilityIdentifier"
          }
        }
      }
    }
  },
  "version" : "1.0"
}